--- a/pages/settings/settings-tmpl.handlebars
+++ b/pages/settings/settings-tmpl.handlebars
@@ -1,6 +1,10 @@
   <h1 class="page-title">Settings</h1>
 
 <div class="row">
+  <div class="alert-container span8 offset1">
+  </div>
+</div>
+<div class="row">
   <div class="plateau span8 offset1">
     <div class="row">
       <div class="span3 avatar-wrapper">
