--- a/pages/business/business-tmpl.handlebars
+++ b/pages/business/business-tmpl.handlebars
@@ -57,7 +57,7 @@
         <h1 class="product-menu-section-title">{{this.name}}</h1>
 
         {{! Section Products }}
-        <div class="products-list">
+        <div class="product-menu-list">
           {{#each this.products}}
           <div class="row">
             <div class="span10 product-item" id="product-list-item-{{this.id}}" data-id="{{this.id}}">
