--- a/styles/product-menus.less
+++ b/styles/product-menus.less
@@ -30,7 +30,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
-.product-menu .products-list .product-item {
+.product-menu .product-menu-list .product-item {
   padding: 10px 0 8px 0;
   border-top: 1px solid #ccc;
   background: #ffffff; /* Old browsers */
@@ -43,13 +43,13 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f5f5f5',GradientType=0 ); /* IE6-9 */
 }
 
-.product-menu .products-list .product-item:hover {
+.product-menu .product-menu-list .product-item:hover {
   cursor: pointer;
   background: #E2F5FF;
   box-shadow: inset 0 1px 0 rgba(255,255,255, 0.8);
 }
 
-.product-menu .products-list > .row:first-child .product-item {
+.product-menu .product-menu-list > .row:first-child .product-item {
   border-top: 0;
 }
 
