--- a/components/alert/alert-style.less
+++ b/components/alert/alert-style.less
@@ -12,11 +12,6 @@
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.33);
-}
-
-.alert h4 {
-  margin: 0;
 }
 
 .alert .close {
@@ -24,10 +19,6 @@
   top: -2px;
   right: -21px;
   line-height: 20px;
-}
-
-.alert-hidden {
-  display: none;
 }
 
 .alert-success {
@@ -63,7 +54,7 @@
   margin-top: 5px;
 }
 
-.close {
+.alert .close {
   float: right;
   font-size: 20px;
   font-weight: bold;
@@ -72,65 +63,14 @@
   text-shadow: 0 1px 0 #ffffff;
   opacity: 0.2;
   filter: alpha(opacity=20);
+  border: 0;
+  background-color: transparent;
 }
 
-.close:hover {
+.alert .close:hover {
   color: #000000;
   text-decoration: none;
   cursor: pointer;
   opacity: 0.4;
   filter: alpha(opacity=40);
-}
-
-button.close {
-  padding: 0;
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  -webkit-appearance: none;
-}
-
-button,
-input,
-select,
-textarea {
-  margin: 0;
-  font-size: 100%;
-  vertical-align: middle;
-}
-button,
-input {
-  *overflow: visible;
-  line-height: normal;
-}
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  cursor: pointer;
-  -webkit-appearance: button;
-}
-
-label,
-input,
-button,
-select,
-textarea {
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 20px;
-}
-
-input,
-button,
-select,
-textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
