--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -21,7 +21,7 @@
             href="#/explore/popular">
           Popular
         </a>
-        <a class="btn btn-large filter-nearby{{#in options.sort "distance"}} active{{/in}}"
+        <a class="btn btn-large filter-nearby{{#in options.sort "nearby"}} active{{/in}}"
             href="#/explore/nearby">
           Nearby
         </a>
@@ -34,9 +34,11 @@
   </div>
 </header>
 
-<ul id="popular" class="products-list"></ul>
-<ul id="nearby"  class="products-list"></ul>
-<ul id="random"  class="products-list"></ul>
+<ul id="popular"       class="products-list"></ul>
+<ul id="nearby"        class="products-list"></ul>
+<ul id="random"        class="products-list"></ul>
+<ul id="search"        class="products-list"></ul>
+<ul id="searchNearby"  class="products-list"></ul>
 
 <h2 class="hide no-results">No products matched your search :(</h2>
 
