--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -34,7 +34,7 @@
           <span class="avatar-shadow"></span>
           <img class="avatar" src="{{filepicker user.avatarUrl 38 38}}" />
         </div>
-        <span class="username">{{#if user.screenName}}{{user.screenName}}{{else}}{{#if user.firstName}}{{user.firstName}} {{truncate user.lastName 1 "."}}{{else}}New User?{{/if}}{{/if}}</span>
+        <span class="username">{{truncate user.displayName 12}}</span>
         <i class="icon-chevron-down expansion-indicator"></i>
         <ul class="dropdown-menu">
             <li><a href="#" class="edit-keytag-link">Connect Your Keytag</a></li>
